[gd_scene load_steps=8 format=3 uid="uid://df1j577q7vw2c"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_gjl4e"]
[ext_resource type="FontFile" uid="uid://bv6d3sm7jqort" path="res://autres/Regothic Medieval.ttf" id="1_nexwv"]
[ext_resource type="FontFile" uid="uid://cvib4ohcbk4hx" path="res://autres/Cardinal-Alternate.ttf" id="2_qgnod"]
[ext_resource type="Script" path="res://scripts/resume_button.gd" id="4_24w40"]
[ext_resource type="Script" path="res://scripts/save_system.gd" id="5_4k7qy"]
[ext_resource type="Script" path="res://scripts/load_button.gd" id="6_ht7kl"]
[ext_resource type="Script" path="res://scripts/quit_button.gd" id="7_7xh23"]

[node name="pause_menu" type="Control"]
visible = false
z_index = 11
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gjl4e")

[node name="panel" type="Panel" parent="."]
visible = false
z_index = 12
layout_mode = 1
anchors_preset = -1
anchor_left = 0.321
anchor_top = 0.159
anchor_right = 0.679
anchor_bottom = 0.841
offset_left = -40.792
offset_top = 15.968
offset_right = -41.208
offset_bottom = 16.032
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="v_box_container" type="VBoxContainer" parent="panel"]
visible = false
z_index = 13
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="pause_label" type="Label" parent="panel/v_box_container"]
visible = false
z_index = 14
layout_mode = 2
theme_override_colors/font_color = Color(0.585369, 0.498446, 0.219282, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_nexwv")
theme_override_font_sizes/font_size = 50
text = "MENU PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="new_button" type="Button" parent="panel/v_box_container/pause_label"]
visible = false
z_index = 15
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 1.094
anchor_right = 0.917
anchor_bottom = 2.226
offset_left = -0.960003
offset_top = 0.0179939
offset_right = -0.804016
offset_bottom = 0.0219955
theme_override_colors/font_color = Color(0.584314, 0.498039, 0.219608, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_qgnod")
theme_override_font_sizes/font_size = 30
text = "Nouvelle Partie
"

[node name="resume_button" type="Button" parent="panel/v_box_container/pause_label"]
z_index = 15
layout_mode = 1
anchors_preset = -1
anchor_left = 0.078
anchor_top = 2.528
anchor_right = 0.915
anchor_bottom = 3.66
offset_left = -0.136002
offset_top = 0.0159912
offset_right = 0.019989
offset_bottom = 0.019989
theme_override_colors/font_color = Color(0.584314, 0.498039, 0.219608, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_qgnod")
theme_override_font_sizes/font_size = 30
text = "Continuer Partie"
script = ExtResource("4_24w40")

[node name="save_button" type="Button" parent="panel/v_box_container/pause_label"]
visible = false
z_index = 15
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 4.0
anchor_right = 0.917
anchor_bottom = 5.132
offset_left = 0.0399971
offset_right = 0.195984
offset_bottom = 0.00396729
theme_override_colors/font_color = Color(0.584314, 0.498039, 0.219608, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_qgnod")
theme_override_font_sizes/font_size = 30
text = "Sauvegarder Partie"
script = ExtResource("5_4k7qy")

[node name="load_button" type="Button" parent="panel/v_box_container/pause_label"]
visible = false
z_index = 15
layout_mode = 1
anchors_preset = -1
anchor_left = 0.083
anchor_top = 5.415
anchor_right = 0.92
anchor_bottom = 6.547
offset_left = -0.196003
offset_top = 0.00497437
offset_right = -0.0400085
offset_bottom = 0.00897217
theme_override_colors/font_color = Color(0.584314, 0.498039, 0.219608, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_qgnod")
theme_override_font_sizes/font_size = 30
text = "Charger Partie"
script = ExtResource("6_ht7kl")

[node name="quit_button" type="Button" parent="panel/v_box_container/pause_label"]
z_index = 15
layout_mode = 1
anchors_preset = -1
anchor_left = 0.085
anchor_top = 6.849
anchor_right = 0.922
anchor_bottom = 7.981
offset_left = -0.0200005
offset_top = 0.00299072
offset_right = 0.135986
offset_bottom = 0.00698853
theme_override_colors/font_color = Color(0.584314, 0.498039, 0.219608, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_qgnod")
theme_override_font_sizes/font_size = 30
text = "Quitter Partie"
script = ExtResource("7_7xh23")
